# rosetta

./: .gitignore  CLAUDE.md  config.py  pyproject.toml  train.py
data/: __init__.py  dataset.py
evaluation/: __init__.py  metrics.py  visualize.py
models/: __init__.py  discriminator.py  encoder.py
notebooks/: shortcuts.ipynb  tutorial.ipynb
training/: __init__.py  trainer.py
